--- a/app/less/_sidebar.less
+++ b/app/less/_sidebar.less
@@ -75,6 +75,13 @@
 }
 
 
+.sidebar-stat-nums__wrap {
+	color: @white;
+	// display: flex;
+	// flex-wrap: wrap;
+	// align-items: center;
+}
+
 .sidebar__lists {
 	height: 148/1000 * 100vh;
 	min-height: 148px;
