--- a/app/pug/layouts/sidebar.pug
+++ b/app/pug/layouts/sidebar.pug
@@ -94,10 +94,10 @@
 							p
 								|Распечатать отчет
 		.sidebar__wrapper
-			.sidebar__info
-				p.sidebar__choosed
-					| Отобрано: 
-					span 56
-				p.sidebar__full-number
-					| Общее количество: 
-					span 42846
+			.sidebar__info#sidebar__stat-nums
+			//- 	p.sidebar__choosed
+			//- 		| Отобрано: 
+			//- 		span 56
+			//- 	p.sidebar__full-number
+			//- 		| Общее количество: 
+			//- 		span 42846
