--- a/app/pug/layouts/work-popup/_work-popup.pug
+++ b/app/pug/layouts/work-popup/_work-popup.pug
@@ -61,12 +61,12 @@
 											p
 												|Создать вакансию
 										
-									li.sidebar__filter-item
-										.sidebar__filter-wrapper
-											p
-												|Удалить
-											span
-												|20.04.2019
+									li.sidebar__filter-item.delete-item#employer-delete
+										//- .sidebar__filter-wrapper
+										//- 	p
+										//- 		|Удалить
+										//- 	span
+										//- 		|20.04.2019
 				.rows
 					#employer-data.employer-data.my-modal-part.active
 						.row.common-info.modal-row
