--- a/app/less/vacancy/_clients.less
+++ b/app/less/vacancy/_clients.less
@@ -1,7 +1,8 @@
 .clients .modal-row__layer {
+
 	position: relative;
 	overflow-y: auto;
-	height: 100%;
+	// height: 100%;
 	.table-full {
 		// display: block;
 		max-width: 100%;
@@ -90,6 +91,10 @@
 		}
 	}
 }
+
+	.clients-layer {
+		width: 100%;
+	}
 
 .switcher {
 	position: absolute;
