--- a/app/less/_loader.less
+++ b/app/less/_loader.less
@@ -13,7 +13,7 @@
   }
 }
 
-.manufactury-type, .contacts-history, .vacancies-history, .media, .feedback-employer{
+.manufactury-type, .contacts-history, .vacancies-history, .media, .feedback-employer, .feedback-vacancy{
   .lds-ring {
       width: 40px;
       height: 40px;
