--- a/app/pug/layouts/vacancy/_popup.pug
+++ b/app/pug/layouts/vacancy/_popup.pug
@@ -245,21 +245,21 @@
 					button.confirm-bnt
 						span
 							|OK
-		#choice-client-feedback-popup.vacancy-modal-popup
-			form
-				.input-group
-					input(type="radio" id="client-feedback-rbtn" name="client-feedback-rbtn")
-					label(for="client-feedback-rbtn")
-						|Выберите клиента
-					input.find-client.info-area(type="text")
-					//- ul.autocomplete-result-list
-				.input-group
-					input(type="radio" id='uamf-feedback-rbtn' name="client-feedback-rbtn")
-					label(for="uamf-feedback-rbtn")
-						|УАМФ
-				button.confirm-bnt
-					span
-						|OK
+		//- #choice-client-feedback-popup.vacancy-modal-popup
+			//- form
+			//- 	.input-group
+			//- 		input(type="radio" id="client-feedback-rbtn" name="client-feedback-rbtn")
+			//- 		label(for="client-feedback-rbtn")
+			//- 			|Выберите клиента
+			//- 		input.find-client.info-area(type="text")
+			//- 		//- ul.autocomplete-result-list
+			//- 	.input-group
+			//- 		input(type="radio" id='uamf-feedback-rbtn' name="client-feedback-rbtn")
+			//- 		label(for="uamf-feedback-rbtn")
+			//- 			|УАМФ
+			//- 	button.confirm-bnt
+			//- 		span
+			//- 			|OK
 		#choice-client-popup.vacancy-modal-popup
 			form
 				.input-group
