--- a/app/less/_init-sprites.less
+++ b/app/less/_init-sprites.less
@@ -137,3 +137,32 @@
 .s-union {
 	.sprite(@s-union)
 }
+
+.s-fax {
+	.sprite(@s-fax)
+}
+
+.s-fb {
+	.sprite(@s-fb)
+}
+
+.s-inst {
+	.sprite(@s-inst)
+}
+
+.s-letter {
+	.sprite(@s-letter)
+}
+
+.s-mail {
+	.sprite(@s-mail)
+}
+
+.s-message {
+	.sprite(@s-message)
+}
+
+.s-web {
+	.sprite(@s-web)
+}
+
