--- a/app/pug/layouts/vacancy/sidebar.pug
+++ b/app/pug/layouts/vacancy/sidebar.pug
@@ -31,15 +31,15 @@
 					span.sidebar__list-add
 						span
 						span
-		.sidebar__statuses
-			.input-group.radio-group-type-2.blue
-				.group
-					input(type="checkbox" id="current-chbx" name="current-chbx" checked="true") 
-					label(for="current-chbx")
-							|Текущие
-					input(type="checkbox" id="archive-chbx" name="archive-chbx")
-					label(for="archive-chbx")
-						|Архивные
+		.sidebar__statuses.active-archive__statuses
+			//- .input-group.radio-group-type-2.blue
+			//- 	.group
+			//- 		input(type="checkbox" id="current-chbx" name="current-chbx" checked="true") 
+			//- 		label(for="current-chbx")
+			//- 				|Текущие
+			//- 		input(type="checkbox" id="archive-chbx" name="archive-chbx")
+			//- 		label(for="archive-chbx")
+			//- 			|Архивные
 		.sidebar__filters
 			.sidebar__input-wrapper#vacancy-search-input-wrapper
 				
