--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -1275,6 +1275,14 @@
       left: 3px;
     }
   }
+
+  .fb-group {
+    .ico {
+      width: 19px;
+      height: 19px;
+    }
+  }
+  
   .web-group {
     .ico, .ico svg {
       width: 22px;
@@ -1287,9 +1295,9 @@
   }
 
   .mail-group {
-    .ico, .ico svg {
-      width: 22px;
-      height: 22px;
+    .ico {
+      width: 18px;
+      height: 18px;
     }
 
     .ico {
