--- a/app/less/_init-sprites.less
+++ b/app/less/_init-sprites.less
@@ -2,6 +2,10 @@
 	.sprite(@s-anket)
 }
 
+.s-arrow {
+	.sprite(@s-arrow)
+}
+
 .s-phone {
 	.sprite(@s-phone);
 }
@@ -164,5 +168,29 @@
 
 .s-web {
 	.sprite(@s-web)
+}
+
+.s-info-feedback {
+	.sprite(@s-info-feedback)
+}
+
+.s-info-feedback-white {
+	.sprite(@s-info-feedback-white)
+}
+
+.s-pos-feedback {
+	.sprite(@s-pos-feedback)
+}
+
+.s-pos-feedback-white {
+	.sprite(@s-pos-feedback-white)
+}
+
+.s-neg-feedback {
+	.sprite(@s-neg-feedback)
+}
+
+.s-neg-feedback-white {
+	.sprite(@s-neg-feedback-white)
 }
 
