--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -1014,6 +1014,9 @@
     i {
       width: 20px;
       height: 20px;
+    &.s-pos-feedback-white, &.s-neg-feedback-white {
+      height: 19px;
+    }
 
       svg {
         width: 20px;
