--- a/app/less/main.less
+++ b/app/less/main.less
@@ -389,8 +389,13 @@ span.negative {
     margin-top: 0.1em;
     height: 20px;
   }
+
+  &.s-neg-feedback-white, &.s-pos-feedback-white {
+    height: 19px;
+  }
 }
 
+// .ico.s-neg-feedback-white
 
 .attention-tag {
   display: flex;
@@ -808,6 +813,8 @@ i.label {
 .choices__item {
   cursor: pointer;
 }
+
+
 
 
 ////////Animations/////
