--- a/app/less/vacancy/_row.less
+++ b/app/less/vacancy/_row.less
@@ -139,7 +139,7 @@
 }
 
 
-.table-full__row  {
+.table-full__layer .table-full__row  {
 	border-bottom: 1px solid @ligth-gray;
 }
 
@@ -209,10 +209,10 @@ p.status {
 }
 
 .table-full__row:first-child {
-	display: flex;
-	height: auto;
-	border-bottom: unset;
-	padding-bottom: 2px;
+	// display: flex;
+	// height: auto;
+	// border-bottom: unset;
+	// padding-bottom: 2px;
 
 	.table-full__title {
 		flex-basis: 244/1484 * 100%;
