--- a/app/pug/layouts/vacancy/_popup.pug
+++ b/app/pug/layouts/vacancy/_popup.pug
@@ -220,31 +220,31 @@
 					button.cancel-bnt
 						span
 							|Отмена
-			#type-feedback-popup.vacancy-modal-popup
-				form
-					p
-						|Тип отзыва
-					.input-group
-						input(type="radio" id="inf-feedback-rbtn" name="type-feedback-rbtn")
-						label(for="inf-feedback-rbtn")
-							i.ico
-								+svg2('inf-feedback')
-							|Информационный
-					.input-group
-						input(type="radio" id='pos-feedback-rbtn' name="type-feedback-rbtn")
-						label(for="pos-feedback-rbtn")
-							i.ico
-								+svg2('pos-feedback')
-							|Хороший отзыв
-					.input-group
-						input(type="radio" id='neg-feedback-rbtn' name="type-feedback-rbtn")
-						label(for="neg-feedback-rbtn")
-							i.ico
-								+svg2('neg-feedback')
-							|Плохой отзыв
-					button.confirm-bnt
-						span
-							|OK
+			//- #type-feedback-popup.vacancy-modal-popup
+			//- 	form
+			//- 		p
+			//- 			|Тип отзыва
+			//- 		.input-group
+			//- 			input(type="radio" id="inf-feedback-rbtn" name="type-feedback-rbtn")
+			//- 			label(for="inf-feedback-rbtn")
+			//- 				i.ico
+			//- 					+svg2('inf-feedback')
+			//- 				|Информационный
+			//- 		.input-group
+			//- 			input(type="radio" id='pos-feedback-rbtn' name="type-feedback-rbtn")
+			//- 			label(for="pos-feedback-rbtn")
+			//- 				i.ico
+			//- 					+svg2('pos-feedback')
+			//- 				|Хороший отзыв
+			//- 		.input-group
+			//- 			input(type="radio" id='neg-feedback-rbtn' name="type-feedback-rbtn")
+			//- 			label(for="neg-feedback-rbtn")
+			//- 				i.ico
+			//- 					+svg2('neg-feedback')
+			//- 				|Плохой отзыв
+			//- 		button.confirm-bnt
+			//- 			span
+			//- 				|OK
 		//- #choice-client-feedback-popup.vacancy-modal-popup
 			//- form
 			//- 	.input-group
@@ -260,14 +260,14 @@
 			//- 	button.confirm-bnt
 			//- 		span
 			//- 			|OK
-		#choice-client-popup.vacancy-modal-popup
-			form
-				.input-group
-					p
-						|Выберите клиента
-					input.info-area(type="text")
-					//- ul.autocomplete-result-list
-				button.confirm-bnt
-					span
-						|OK
+		//- #choice-client-popup.vacancy-modal-popup
+		//- 	form
+		//- 		.input-group
+		//- 			p
+		//- 				|Выберите клиента
+		//- 			input.info-area(type="text")
+		//- 			//- ul.autocomplete-result-list
+		//- 		button.confirm-bnt
+		//- 			span
+		//- 				|OK
 		include vacancy-popup/_vacancy-popup
