--- a/app/pug/layouts/vacancy/sidebar.pug
+++ b/app/pug/layouts/vacancy/sidebar.pug
@@ -65,7 +65,7 @@
 							|Даты и сроки
 						span.sidebar__filter-remove
 				li.sidebar__filter-item.sidebar__li
-					.sidebar__filter-wrapper.managers-filter-wrapper
+					.sidebar__filter-wrapper.managers-filter-wrapper-vacancy
 						p
 							|Менеджер
 						span.sidebar__filter-remove
