--- a/app/less/vacancy/_main-info.less
+++ b/app/less/vacancy/_main-info.less
@@ -13,6 +13,14 @@
 		position: relative;
 		overflow: visible;
 	}
+	.modal-row__wrapper {
+		display: flex;
+		justify-content: space-between;
+		align-items: flex-start;
+		width: 100%;
+		height: 100%;
+		// min-height: 200px;
+	}
 
 	.main-info_right {
 		padding-top: 0;
@@ -57,10 +65,12 @@
 		padding-top: 24px;
 		padding-bottom: 15px;
 		flex-basis: 50%;
+		height: 100%;
 	}
 
 	.main-info__layer_right {
 		flex-basis: 50%;
+		height: 100%;
 	}
 
 	p {
