--- a/app/pug/layouts/vacancy/vacancy-popup/_main-info.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_main-info.pug
@@ -1,122 +1,122 @@
 .row.main-info.modal-row
 	.modal-row__layer.main-info_left
-		.main-info__choose-block
-			.choose-employer
-				p
-					span
-						|Выберете работодателя
-			.choose-product-type
-				p.country-vacancy
-					span
-						|NO 293
-				p.type-product
-					span
-						|Выберете тип продукции
-			.full-info
-				p.country-vacancy
-					span
-						|NO 293
-				p.products
-					span.visa-type
-						|Сезонная - 
-					span.types
-						| Цветы, Теплицы, Молочные коровы, Мясные коровы
-		.main-info__layer_left
-			.main-info__country
-				p
-					|Страны
-				span
-					|Норвегия
-			.main-info__period
-				p
-					|Период
-				span
-					|3 мес
-			.main-info__clients
-				p
-					|Кол-во клиентов
-				span.main-info__numbers
-					span.number-of-people.total-number.attention-number
-						|17 - 
-					span.number-of-people.attention-number
-						|М12 Ж5
-		.main-info__layer_right
-			.main-info__price
-				p
-					|Цена вакансии
-				span
-					|не достаточно данных
-			.main-info__dates
-				p
-					|Даты
-				span
-					|01.06.2020 - 15.04.2020
-			.main-info__closed-vacancies
-				p
-					|Закрытые вакансии
-				.main-info__indicators
-					span.indicator.decline.main-info__indicator
-						span
-							|4
-					span.indicator.choosen.main-info__indicator
-						span
-							|8
-					span.indicator.ready.main-info__indicator
-						span
-							|5
-					span.indicator.wait.main-info__indicator
-						span
-							|12
-					span.indicator.department.main-info__indicator
-						span
-							|3
-					span.indicator.busy.main-info__indicator
-						span
-							|2
+		//- .main-info__choose-block
+		//- 	.choose-employer
+		//- 		p
+		//- 			span
+		//- 				|Выберете работодателя
+		//- 	.choose-product-type
+		//- 		p.country-vacancy
+		//- 			span
+		//- 				|NO 293
+		//- 		p.type-product
+		//- 			span
+		//- 				|Выберете тип продукции
+		//- 	.full-info
+		//- 		p.country-vacancy
+		//- 			span
+		//- 				|NO 293
+		//- 		p.products
+		//- 			span.visa-type
+		//- 				|Сезонная - 
+		//- 			span.types
+		//- 				| Цветы, Теплицы, Молочные коровы, Мясные коровы
+		//- .main-info__layer_left
+		//- 	.main-info__country
+		//- 		p
+		//- 			|Страны
+		//- 		span
+		//- 			|Норвегия
+		//- 	.main-info__period
+		//- 		p
+		//- 			|Период
+		//- 		span
+		//- 			|3 мес
+		//- 	.main-info__clients
+		//- 		p
+		//- 			|Кол-во клиентов
+		//- 		span.main-info__numbers
+		//- 			span.number-of-people.total-number.attention-number
+		//- 				|17 - 
+		//- 			span.number-of-people.attention-number
+		//- 				|М12 Ж5
+		//- .main-info__layer_right
+		//- 	.main-info__price
+		//- 		p
+		//- 			|Цена вакансии
+		//- 		span
+		//- 			|не достаточно данных
+		//- 	.main-info__dates
+		//- 		p
+		//- 			|Даты
+		//- 		span
+		//- 			|01.06.2020 - 15.04.2020
+		//- 	.main-info__closed-vacancies
+		//- 		p
+		//- 			|Закрытые вакансии
+		//- 		.main-info__indicators
+		//- 			span.indicator.decline.main-info__indicator
+		//- 				span
+		//- 					|4
+		//- 			span.indicator.choosen.main-info__indicator
+		//- 				span
+		//- 					|8
+		//- 			span.indicator.ready.main-info__indicator
+		//- 				span
+		//- 					|5
+		//- 			span.indicator.wait.main-info__indicator
+		//- 				span
+		//- 					|12
+		//- 			span.indicator.department.main-info__indicator
+		//- 				span
+		//- 					|3
+		//- 			span.indicator.busy.main-info__indicator
+		//- 				span
+		//- 					|2
 	.modal-row__layer.main-info_right
-		.main-info__choose-block
-			.choose-employer
-				p
-					span
-						|Выберете работодателя
-			.employer-name
-				p
-					span
-						|Thompson Equestrian Partners
-			.full-info
-				p.country-vacancy
-					span
-						|NO 293
-				p.products
-					span.visa-type
-						|Сезонная - 
-					span.types
-						| Цветы, Теплицы, Молочные коровы, Мясные коровы
-		.main-info__layer_left
-			.main-info__contact-person
-				p
-					|Контактное лицо
-				span
-					|Anne Lise Haukadal
-			.main-info__phones
-				p
-					|Телефоны
-				a(href="tel:+4797167262")
-					|+4797167262
-			.main-info__email
-				p
-					|E-Mail
-				a(href="mailto:kroken@kroken.no")
-					|kroken@kroken.no
-		.main-info__layer_right
-			.map
-				div(style='overflow:hidden;width: 100%;position: relative;')
-					iframe(width='100%' height='200' src='https://maps.google.com/maps?width=100%&height=200&hl=en&q=%D0%96%D0%B8%D1%82%D0%BE%D0%BC%D0%B8%D1%80+(%D0%9D%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5)&ie=UTF8&t=&z=11&iwloc=B&output=embed' frameborder='0' scrolling='no' marginheight='0' marginwidth='0')
-					div(style='position: absolute;width: 80%;bottom: 10px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;')
-						small(style='line-height: 1.8;font-size: 2px;background: #fff;')
-							| Powered by 
-							a(href='https://embedgooglemaps.com/ru/') embedgooglemaps RU
-							|	&amp; 
-							a(href='https://iamsterdamcard.it') i amsterdamcard it
-					style.
-						#gmap_canvas img{max-width:none!important;background:none!important}
+		//- .main-info__choose-block
+		//- 	.choose-employer
+		//- 		p
+		//- 			span
+		//- 				|Выберете работодателя
+		//- 	.employer-name
+		//- 		p
+		//- 			span
+		//- 				|Thompson Equestrian Partners
+		//- 	.full-info
+		//- 		p.country-vacancy
+		//- 			span
+		//- 				|NO 293
+		//- 		p.products
+		//- 			span.visa-type
+		//- 				|Сезонная - 
+		//- 			span.types
+		//- 				| Цветы, Теплицы, Молочные коровы, Мясные коровы
+		//- .main-info__layer_left
+		//- 	.main-info__contact-person
+		//- 		p
+		//- 			|Контактное лицо
+		//- 		span
+		//- 			|Anne Lise Haukadal
+		//- 	.main-info__phones
+		//- 		p
+		//- 			|Телефоны
+		//- 		a(href="tel:+4797167262")
+		//- 			|+4797167262
+		//- 	.main-info__email
+		//- 		p
+		//- 			|E-Mail
+		//- 		a(href="mailto:kroken@kroken.no")
+		//- 			|kroken@kroken.no
+		//- .main-info__layer_right
+		//- 	.map
+		//- 		div(style='overflow:hidden;width: 100%;position: relative;')
+		//- 			iframe(width='100%' height='200' src='https://maps.google.com/maps?width=100%&height=200&hl=en&q=%D0%96%D0%B8%D1%82%D0%BE%D0%BC%D0%B8%D1%80+(%D0%9D%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5)&ie=UTF8&t=&z=11&iwloc=B&output=embed' frameborder='0' scrolling='no' marginheight='0' marginwidth='0')
+		//- 			div(style='position: absolute;width: 80%;bottom: 10px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;')
+		//- 				small(style='line-height: 1.8;font-size: 2px;background: #fff;')
+		//- 					| Powered by 
+		//- 					a(href='https://embedgooglemaps.com/ru/') embedgooglemaps RU
+		//- 					|	&amp; 
+		//- 					a(href='https://iamsterdamcard.it') i amsterdamcard it
+		//- 			style.
+		//- 				#gmap_canvas img{max-width:none!important;background:none!important}
