--- a/app/pug/layouts/work-popup/_work-popup.pug
+++ b/app/pug/layouts/work-popup/_work-popup.pug
@@ -1,6 +1,6 @@
 #modal-1.modal.micromodal-slide(aria-hidden='true')
-	.modal__overlay(tabindex='-1' data-custom-close="modal-1")
-		.modal__wrapper.my-modal-wrapper
+	.modal__overlay(tabindex='-1')
+		.modal__wrapper.my-modal-wrapper()
 			.modal__container.work-modal.my-modal(role='dialog' aria-modal='true' aria-labelledby='modal-1-title')
 				span.modal__close(data-custom-close="modal-1")
 					span
