--- a/app/less/vacancy/_popup.less
+++ b/app/less/vacancy/_popup.less
@@ -266,11 +266,11 @@
             width: 77px;
         }
 
-        input:checked + [for="practice-rbtn-1"] {
+        input:checked + [for="radio-practice-rbtn-1"] {
             background: @grass-green;
         }
 
-        input:checked + [for="work-rbtn-1"] {
+        input:checked + [for="radio-work-rbtn-1"] {
             background: @blue;
         }
 
