--- a/app/less/vacancy/_sidebar.less
+++ b/app/less/vacancy/_sidebar.less
@@ -49,3 +49,9 @@
 		justify-content: center;
 	}
 }
+
+.sidebar__stat-nums_vacancy {
+	background: @main-color;
+  height: 8.5vh;
+  min-height: 85px;
+}
