--- a/app/pug/layouts/vacancy/sidebar.pug
+++ b/app/pug/layouts/vacancy/sidebar.pug
@@ -88,14 +88,14 @@
 						.sidebar__stats-wrapper
 							p
 								|Распечатать отчет
-		.sidebar__wrapper
-			.sidebar__info
-				p.sidebar__needed
-					|Требуется работников: 
-					span 12
-				p.sidebar__full-number
-					|Рабочих мест: 
-					span 56
-				p.sidebar__current
-					|Текущих вакансий: 
-					span 18
+		.sidebar__wrapper.sidebar__stat-nums_vacancy
+			//- .sidebar__info
+			//- 	p.sidebar__needed
+			//- 		|Требуется работников: 
+			//- 		span 12
+			//- 	p.sidebar__full-number
+			//- 		|Рабочих мест: 
+			//- 		span 56
+			//- 	p.sidebar__current
+			//- 		|Текущих вакансий: 
+			//- 		span 18
