--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -1065,6 +1065,14 @@
       padding: 4px 12px;
       margin-left: 28px;
       line-height: normal;
+
+      textarea {
+        color: @main-color;
+        font-style: italic;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 16px;
+      }
    }
 
 
@@ -1416,6 +1424,10 @@
   }
 }
 
+.sidebar-select-modal__list.choices__list--single, .contact-select-modal__list.choices__list--single {
+  padding-right: 25px;
+}
+
   .common-info-select-modal__list.choices__list--dropdown {
    overflow: auto;
      max-height: 250px;
@@ -1512,7 +1524,9 @@
 
 
     .manager-block {
-      flex-basis: 149/740 * 100%;
+      // flex-basis: 200/740 * 100%;
+      width: auto;
+      min-width: 200px;
 
       .sidebar-select-modal_inner {
         background: @white;
@@ -1557,7 +1571,8 @@
     }
 
     .contact-type-block {
-      flex-basis: 177/740 * 100%;
+      width: auto;
+      min-width: 200px;
     }
 
   .contact-ico {
