--- a/app/vacancy.pug
+++ b/app/vacancy.pug
@@ -34,15 +34,15 @@ block content
 		.sidebar.vacancy-sidebar
 			include pug/layouts/vacancy/sidebar
 		.rows-wrapper.vacancy-rows-wrapper
-			.rows.vacancy-rows
-				.grid
-					//- .side-column
-					.columns
-						.grid-column.first-column
-						.grid-column.second-column
-						.grid-column.third-column
-						.grid-column.fourth-column
-						.grid-column.fifth-column
+			//- .rows.vacancy-rows
+			//- 	.grid
+			//- 		//- .side-column
+			//- 		.columns
+			//- 			.grid-column.first-column
+			//- 			.grid-column.second-column
+			//- 			.grid-column.third-column
+			//- 			.grid-column.fourth-column
+			//- 			.grid-column.fifth-column
 				//- include pug/layouts/vacancy/row
 				//- include pug/layouts/vacancy/row
 				//- include pug/layouts/vacancy/row
