--- a/app/less/_sidebar.less
+++ b/app/less/_sidebar.less
@@ -76,7 +76,7 @@
 
 
 .sidebar-stat-nums__wrap {
-	color: @white;
+	color: @secondary;
 	// display: flex;
 	// flex-wrap: wrap;
 	// align-items: center;
@@ -166,7 +166,9 @@
 	font-size: 1rem;
 	display: block;
 	border-radius: 3px;
-	padding: 3px 6px;
+	padding: 0px 6px;
+	padding-top: 5px;
+	padding-bottom: 2px;
 	padding-right: 20px;
 	border: 2px solid transparent;
 	text-align: left;
