--- a/app/pug/layouts/_popup.pug
+++ b/app/pug/layouts/_popup.pug
@@ -1,7 +1,7 @@
 .popup
 	.popup__layer
 		#country-popup.sidebar-popup
-			//- form
+			form.flex-form
 			//- 	.input-group
 			//- 		input(type="checkbox" id="AT-chbx")
 			//- 		label(for="AT-chbx")
@@ -129,7 +129,7 @@
 			//- 				|CK
 			//- 			|Светлана Ковальчук
 		#intermediaries-popup.sidebar-popup
-			form
+			//- form
 			//- 	.input-group.radio-group-type-1
 			//- 		input(type="radio" id="show-rbtn" name="intermediaries-rbtn" checked="true")
 			//- 		label(for="show-rbtn")
