--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -362,6 +362,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 4px;
     .add-item {
       cursor: pointer;
       display: flex;
@@ -444,13 +445,18 @@
     flex-wrap: wrap;
     position: relative;
     background: transparent;
+   
     &:hover {
       background: transparent;
 
     }
-    &:not(:last-child) {
-      margin-bottom: 20px;
+
+    .loading {
+       min-height: 40px;
     }
+    // &:not(:last-child) {
+    //   margin-bottom: 20px;
+    // }
 
     .show-more {
       position: absolute;
@@ -475,6 +481,14 @@
         margin-top: 0.2em;
       }
     }
+  }
+
+  // .row.vacancies-history {
+  //   margin-bottom: 0;
+  // }
+
+  .modal-row__inner-layer {
+    margin-bottom: 20px;
   }
 
   .modal-row__cell {
@@ -1540,6 +1554,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        height: 26px;
 
         .ico {
           width: 22px;
@@ -1600,4 +1615,10 @@
     resize: none;
   }
 }
+
+
+.manager-select-wrap {
+  margin-bottom: 15px;
+}
+
 
