--- a/app/less/main.less
+++ b/app/less/main.less
@@ -652,7 +652,8 @@ i.label {
   transition: border 0.2s linear;
   outline: none;
   text-align: left;
-  padding: 3px 6px 2px 6px;
+  padding: 4px 6px 1px 6px;
+  font-size: 1rem;
 
   &:focus {
     border: 2px solid @main-color;
