--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -451,7 +451,7 @@
 
     }
 
-    .loading {
+    &.loading {
        min-height: 40px;
     }
     // &:not(:last-child) {
@@ -1149,7 +1149,7 @@
     .modal-row__feedback-text {
       display: flex;
       padding: 0;
-      margin-bottom: 9px;
+      margin-bottom: 17px;
       textarea {
         resize: none;
         width: 100%;
