--- a/app/less/sprite.less
+++ b/app/less/sprite.less
@@ -13,15 +13,15 @@ At the bottom of this section, we provide information about the spritesheet itse
 */
 @s-union-name: 's-Union';
 @s-union-x: 151px;
-@s-union-y: 99px;
+@s-union-y: 110px;
 @s-union-offset-x: -151px;
-@s-union-offset-y: -99px;
+@s-union-offset-y: -110px;
 @s-union-width: 8px;
 @s-union-height: 6px;
 @s-union-total-width: 163px;
 @s-union-total-height: 142px;
 @s-union-image: 'sprite.png';
-@s-union: 151px 99px -151px -99px 8px 6px 163px 142px 'sprite.png' 's-Union';
+@s-union: 151px 110px -151px -110px 8px 6px 163px 142px 'sprite.png' 's-Union';
 @s-anket-name: 's-anket';
 @s-anket-x: 145px;
 @s-anket-y: 38px;
@@ -35,26 +35,37 @@ At the bottom of this section, we provide information about the spritesheet itse
 @s-anket: 145px 38px -145px -38px 16px 20px 163px 142px 'sprite.png' 's-anket';
 @s-arr-left-name: 's-arr-left';
 @s-arr-left-x: 157px;
-@s-arr-left-y: 86px;
+@s-arr-left-y: 97px;
 @s-arr-left-offset-x: -157px;
-@s-arr-left-offset-y: -86px;
+@s-arr-left-offset-y: -97px;
 @s-arr-left-width: 6px;
 @s-arr-left-height: 8px;
 @s-arr-left-total-width: 163px;
 @s-arr-left-total-height: 142px;
 @s-arr-left-image: 'sprite.png';
-@s-arr-left: 157px 86px -157px -86px 6px 8px 163px 142px 'sprite.png' 's-arr-left';
+@s-arr-left: 157px 97px -157px -97px 6px 8px 163px 142px 'sprite.png' 's-arr-left';
 @s-arr-right-name: 's-arr-right';
 @s-arr-right-x: 145px;
-@s-arr-right-y: 99px;
+@s-arr-right-y: 110px;
 @s-arr-right-offset-x: -145px;
-@s-arr-right-offset-y: -99px;
+@s-arr-right-offset-y: -110px;
 @s-arr-right-width: 6px;
 @s-arr-right-height: 8px;
 @s-arr-right-total-width: 163px;
 @s-arr-right-total-height: 142px;
 @s-arr-right-image: 'sprite.png';
-@s-arr-right: 145px 99px -145px -99px 6px 8px 163px 142px 'sprite.png' 's-arr-right';
+@s-arr-right: 145px 110px -145px -110px 6px 8px 163px 142px 'sprite.png' 's-arr-right';
+@s-arrow-white-name: 's-arrow-white';
+@s-arrow-white-x: 145px;
+@s-arrow-white-y: 86px;
+@s-arrow-white-offset-x: -145px;
+@s-arrow-white-offset-y: -86px;
+@s-arrow-white-width: 16px;
+@s-arrow-white-height: 11px;
+@s-arrow-white-total-width: 163px;
+@s-arrow-white-total-height: 142px;
+@s-arrow-white-image: 'sprite.png';
+@s-arrow-white: 145px 86px -145px -86px 16px 11px 163px 142px 'sprite.png' 's-arrow-white';
 @s-arrow-name: 's-arrow';
 @s-arrow-x: 145px;
 @s-arrow-y: 74px;
@@ -508,15 +519,15 @@ At the bottom of this section, we provide information about the spritesheet itse
 @s-se: 50px 103px -50px -103px 25px 19px 163px 142px 'sprite.png' 's-se';
 @s-star-name: 's-star';
 @s-star-x: 145px;
-@s-star-y: 86px;
+@s-star-y: 97px;
 @s-star-offset-x: -145px;
-@s-star-offset-y: -86px;
+@s-star-offset-y: -97px;
 @s-star-width: 12px;
 @s-star-height: 13px;
 @s-star-total-width: 163px;
 @s-star-total-height: 142px;
 @s-star-image: 'sprite.png';
-@s-star: 145px 86px -145px -86px 12px 13px 163px 142px 'sprite.png' 's-star';
+@s-star: 145px 97px -145px -97px 12px 13px 163px 142px 'sprite.png' 's-star';
 @s-ua-name: 's-ua';
 @s-ua-x: 75px;
 @s-ua-y: 103px;
@@ -553,7 +564,7 @@ At the bottom of this section, we provide information about the spritesheet itse
 @spritesheet-width: 163px;
 @spritesheet-height: 142px;
 @spritesheet-image: 'sprite.png';
-@spritesheet-sprites: @s-union @s-anket @s-arr-left @s-arr-right @s-arrow @s-at @s-attention @s-au @s-be @s-ca @s-ch @s-cy @s-cz @s-de @s-dk @s-documents @s-es @s-fax @s-fb @s-fi @s-fr @s-gb @s-gr @s-hu @s-il @s-info-feedback-white @s-info-feedback @s-inst @s-is @s-letter @s-lv @s-mail @s-message @s-neg-feedback-white @s-neg-feedback @s-nl @s-no @s-nz @s-phone-red @s-phone @s-pl @s-pos-feedback-white @s-pos-feedback @s-pt @s-se @s-star @s-ua @s-us @s-web;
+@spritesheet-sprites: @s-union @s-anket @s-arr-left @s-arr-right @s-arrow-white @s-arrow @s-at @s-attention @s-au @s-be @s-ca @s-ch @s-cy @s-cz @s-de @s-dk @s-documents @s-es @s-fax @s-fb @s-fi @s-fr @s-gb @s-gr @s-hu @s-il @s-info-feedback-white @s-info-feedback @s-inst @s-is @s-letter @s-lv @s-mail @s-message @s-neg-feedback-white @s-neg-feedback @s-nl @s-no @s-nz @s-phone-red @s-phone @s-pl @s-pos-feedback-white @s-pos-feedback @s-pt @s-se @s-star @s-ua @s-us @s-web;
 @spritesheet: 163px 142px 'sprite.png' @spritesheet-sprites;
 
 /*
