--- a/app/less/main.less
+++ b/app/less/main.less
@@ -386,7 +386,7 @@ span.negative {
   height: 20px;
   svg {
     width: 20px;
-    margin-top: 0.1em;
+    // margin-top: 0.1em;
     height: 20px;
   }
 
