--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -1479,6 +1479,7 @@
   background: @main-color;
   max-width: 800px;
   width: 100%;
+  margin: 0 auto;
 
   .confirm-btn {
     background: @secondary;
