--- a/app/less/_init-sprites.less
+++ b/app/less/_init-sprites.less
@@ -159,9 +159,14 @@
 	.sprite(@s-inst)
 }
 
-.s-letter {
-	.sprite(@s-letter)
+// .s-letter {
+// 	.sprite(@s-letter)
+// }
+
+.s-email{
+	.sprite(@s-email)
 }
+
 
 .s-mail {
 	.sprite(@s-mail)
