--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -481,6 +481,12 @@
         margin-top: 0.2em;
       }
     }
+
+    &.feedback {
+      .show-more {
+        bottom: -8px;
+      }
+    }
   }
 
   // .row.vacancies-history {
@@ -884,10 +890,15 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding-left: 11px;
+    padding-left: 8px;
 
-    .ico {
+    .ico__layer {
       margin-right: 12px;
+      width: 24px;
+    }
+
+    .ico-s {
+      margin: 0 auto;
     }
  }
 
@@ -915,7 +926,7 @@
     }
   }
   .info-area {
-    padding-left: 35px;
+    padding-left: 33px;
   }
  }
 
