--- a/app/less/main.less
+++ b/app/less/main.less
@@ -395,6 +395,14 @@ span.negative {
   }
 }
 
+.ico__layer {
+  display: block;
+}
+
+.ico-s {
+  display: block;
+}
+
 // .ico.s-neg-feedback-white
 
 .attention-tag {
