--- a/app/less/sprite.less
+++ b/app/less/sprite.less
@@ -198,6 +198,17 @@ At the bottom of this section, we provide information about the spritesheet itse
 @s-documents-total-height: 142px;
 @s-documents-image: 'sprite.png';
 @s-documents: 145px 0px -145px 0px 18px 20px 163px 142px 'sprite.png' 's-documents';
+@s-email-name: 's-email';
+@s-email-x: 145px;
+@s-email-y: 20px;
+@s-email-offset-x: -145px;
+@s-email-offset-y: -20px;
+@s-email-width: 18px;
+@s-email-height: 18px;
+@s-email-total-width: 163px;
+@s-email-total-height: 142px;
+@s-email-image: 'sprite.png';
+@s-email: 145px 20px -145px -20px 18px 18px 163px 142px 'sprite.png' 's-email';
 @s-es-name: 's-es';
 @s-es-x: 95px;
 @s-es-y: 19px;
@@ -341,17 +352,6 @@ At the bottom of this section, we provide information about the spritesheet itse
 @s-is-total-height: 142px;
 @s-is-image: 'sprite.png';
 @s-is: 120px 0px -120px 0px 25px 19px 163px 142px 'sprite.png' 's-is';
-@s-letter-name: 's-letter';
-@s-letter-x: 24px;
-@s-letter-y: 0px;
-@s-letter-offset-x: -24px;
-@s-letter-offset-y: 0px;
-@s-letter-width: 24px;
-@s-letter-height: 24px;
-@s-letter-total-width: 163px;
-@s-letter-total-height: 142px;
-@s-letter-image: 'sprite.png';
-@s-letter: 24px 0px -24px 0px 24px 24px 163px 142px 'sprite.png' 's-letter';
 @s-lv-name: 's-lv';
 @s-lv-x: 120px;
 @s-lv-y: 19px;
@@ -364,16 +364,16 @@ At the bottom of this section, we provide information about the spritesheet itse
 @s-lv-image: 'sprite.png';
 @s-lv: 120px 19px -120px -19px 25px 19px 163px 142px 'sprite.png' 's-lv';
 @s-mail-name: 's-mail';
-@s-mail-x: 145px;
-@s-mail-y: 20px;
-@s-mail-offset-x: -145px;
-@s-mail-offset-y: -20px;
-@s-mail-width: 18px;
-@s-mail-height: 18px;
+@s-mail-x: 24px;
+@s-mail-y: 0px;
+@s-mail-offset-x: -24px;
+@s-mail-offset-y: 0px;
+@s-mail-width: 24px;
+@s-mail-height: 24px;
 @s-mail-total-width: 163px;
 @s-mail-total-height: 142px;
 @s-mail-image: 'sprite.png';
-@s-mail: 145px 20px -145px -20px 18px 18px 163px 142px 'sprite.png' 's-mail';
+@s-mail: 24px 0px -24px 0px 24px 24px 163px 142px 'sprite.png' 's-mail';
 @s-message-name: 's-message';
 @s-message-x: 22px;
 @s-message-y: 24px;
@@ -564,7 +564,7 @@ At the bottom of this section, we provide information about the spritesheet itse
 @spritesheet-width: 163px;
 @spritesheet-height: 142px;
 @spritesheet-image: 'sprite.png';
-@spritesheet-sprites: @s-union @s-anket @s-arr-left @s-arr-right @s-arrow-white @s-arrow @s-at @s-attention @s-au @s-be @s-ca @s-ch @s-cy @s-cz @s-de @s-dk @s-documents @s-es @s-fax @s-fb @s-fi @s-fr @s-gb @s-gr @s-hu @s-il @s-info-feedback-white @s-info-feedback @s-inst @s-is @s-letter @s-lv @s-mail @s-message @s-neg-feedback-white @s-neg-feedback @s-nl @s-no @s-nz @s-phone-red @s-phone @s-pl @s-pos-feedback-white @s-pos-feedback @s-pt @s-se @s-star @s-ua @s-us @s-web;
+@spritesheet-sprites: @s-union @s-anket @s-arr-left @s-arr-right @s-arrow-white @s-arrow @s-at @s-attention @s-au @s-be @s-ca @s-ch @s-cy @s-cz @s-de @s-dk @s-documents @s-email @s-es @s-fax @s-fb @s-fi @s-fr @s-gb @s-gr @s-hu @s-il @s-info-feedback-white @s-info-feedback @s-inst @s-is @s-lv @s-mail @s-message @s-neg-feedback-white @s-neg-feedback @s-nl @s-no @s-nz @s-phone-red @s-phone @s-pl @s-pos-feedback-white @s-pos-feedback @s-pt @s-se @s-star @s-ua @s-us @s-web;
 @spritesheet: 163px 142px 'sprite.png' @spritesheet-sprites;
 
 /*
