--- a/app/pug/layouts/vacancy/vacancy-popup/_main-info.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_main-info.pug
@@ -1,5 +1,6 @@
 .row.main-info.modal-row
-	.modal-row__layer.main-info_left
+	.main-info__layer.modal-row__inner-layer
+		.modal-row__layer.main-info_left
 		//- .main-info__choose-block
 		//- 	.choose-employer
 		//- 		p
@@ -73,7 +74,7 @@
 		//- 			span.indicator.busy.main-info__indicator
 		//- 				span
 		//- 					|2
-	.modal-row__layer.main-info_right
+		.modal-row__layer.main-info_right
 		//- .main-info__choose-block
 		//- 	.choose-employer
 		//- 		p
