--- a/app/less/vacancy/_main-info.less
+++ b/app/less/vacancy/_main-info.less
@@ -2,6 +2,12 @@
 	flex-wrap: nowrap;
 	margin-top: 19px;
 
+	.main-info__layer {
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: nowrap;
+		width: 100%;
+	}
 
 	.modal-row__layer {
 		flex-basis: 500/1040 * 100%;
